@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<scraper framework="1.1" date="2012-04-28">
+<scraper framework="1.1" date="2013-02-03">
 	<NfoUrl dest="3">
 		<RegExp input="$$1" output="&lt;url&gt;http://akas.imdb.com/title/tt\1/&lt;/url&gt;&lt;id&gt;tt\1&lt;/id&gt;" dest="3">
 			<expression clear="yes" noclean="1">imdb....?/Title\?([0-9]*)</expression>
@@ -76,11 +76,11 @@
 	</GetAKASearchResults>
 	<GetDetails dest="3">
 		<RegExp input="$$5" output="&lt;details&gt;\1&lt;/details&gt;" dest="3">
-			<RegExp conditional="imdbsearch" input="$$1" output="\2" dest="19">
-				<expression fixchars="2">&lt;meta name=&quot;title&quot; content=&quot;(IMDb - )?(?:&amp;#x22;)?([^&quot;]*?)(?:&amp;#x22;)? \([^\(]*?([0-9]{4})\)</expression>
+			<RegExp conditional="imdbsearch" input="$$1" output="\1" dest="19">
+				<expression fixchars="1" trim="1">&lt;br/&gt;&lt;span\sclass=&quot;title-extra&quot;&gt;([^&lt;]*)&lt;i&gt;\(original title\)</expression>
 			</RegExp>
 			<RegExp conditional="imdbsearch" input="$$1" output="\2" dest="20">
-				<expression>&lt;meta name=&quot;title&quot; content=&quot;([^&quot;]*?) \([^\(]*?([0-9]{4})\)</expression>
+				<expression>&lt;meta name=&quot;title&quot;\scontent=&quot;([^&quot;]*?)\s\([^\(]*?([0-9]{4})\)</expression>
 			</RegExp>
 			<RegExp conditional="tmdbsearch" input="$$1" output="\1" dest="2">
 				<expression noclean="1">&quot;id&quot;:([0-9]*),&quot;imdb_id</expression>
