@@ -1,3 +1,6 @@
+[B]2.1.9[/B]
+- fixed: issue with original title
+
 [B]2.1.8[/B]
 - cosmetic: synced version number with Eden
 
